--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "@testing-library/user-event": "^12.8.1",
     "bootstrap": "^4.6.0",
     "bootswatch": "^4.6.0",
-    "react": "^17.0.1",
+    "react": "18.2.0",
     "react-cute-dice": "^0.2.4",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.2.0",
     "react-input-range": "^1.3.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "react-toastify": "^7.0.3",
     "reactstrap": "^9.0.0-0",
     "web-vitals": "^1.1.0"
