--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "deviance",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.1",
-    "bootstrap": "^4.6.0",
-    "bootswatch": "^4.6.0",
-    "react": "18.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
+    "bootswatch": "^5.3.8",
+    "cyber-dice": "^2.0.1",
+    "react": "^18.2.0",
     "react-cute-dice": "^0.2.4",
     "react-dom": "^18.2.0",
-    "react-input-range": "^1.3.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
-    "react-toastify": "^7.0.3",
-    "reactstrap": "^9.0.0-0",
-    "web-vitals": "^1.1.0"
+    "react-toastify": "^9.1.3",
+    "reactstrap": "^9.2.1",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
